// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a table 1`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/create_table",
        "props": {
          "attributeDefinitions": {
            "id": "S",
          },
          "hashKey": "id",
          "name": "new_table",
        },
        "type": "wingsdk.ex.DynamodbTable",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "create_table": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A DynamoDb Table",
            "title": "DynamodbTable",
          },
          "id": "create_table",
          "path": "root/create_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`get item 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.ex.DynamodbTable created.",
  "wingsdk.ex.DynamodbTable deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`get item 2`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/get_table",
        "props": {
          "attributeDefinitions": {
            "id": "S",
          },
          "hashKey": "id",
          "name": "my_get_table",
        },
        "type": "wingsdk.ex.DynamodbTable",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "get_table": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A DynamoDb Table",
            "title": "DynamodbTable",
          },
          "id": "get_table",
          "path": "root/get_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`put item 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.ex.DynamodbTable created.",
  "wingsdk.ex.DynamodbTable deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`put item 2`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/put_table",
        "props": {
          "attributeDefinitions": {
            "id": "S",
          },
          "hashKey": "id",
          "name": "my_insert_table",
        },
        "type": "wingsdk.ex.DynamodbTable",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "put_table": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A DynamoDb Table",
            "title": "DynamodbTable",
          },
          "id": "put_table",
          "path": "root/put_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`update item 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.ex.DynamodbTable created.",
  "wingsdk.ex.DynamodbTable deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`update item 2`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/update_table",
        "props": {
          "attributeDefinitions": {
            "id": "S",
          },
          "hashKey": "id",
          "name": "my_update_table",
        },
        "type": "wingsdk.ex.DynamodbTable",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "update_table": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A DynamoDb Table",
            "title": "DynamodbTable",
          },
          "id": "update_table",
          "path": "root/update_table",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
